# pdnssoc-cli

./: .gitignore  AUTHORS.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: release_pypi.yml  release_testpypi.yml
config/: godnscollector-config.yml  pdnssoccli.yml
pdnssoccli/: pdnssoccli.py
pdnssoccli/subcommands/: alert.py  correlate.py  fetch_iocs.py  utils.py
pdnssoccli/utils/: alert.py  correlation.py  enrichment.py  file.py  time.py
templates/: alert_email.html  mattermost.template  slack.template
