[tool.poetry]
name = "pdnssoc"
version = "0.0.2"
description = "Correlate logs with MISP and produces contextualized alerts"
authors = ["safer-trust <developers@safer-trust.org>"]
packages = [{include = "pdnssoccli"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "*"
ipaddress = "*"
schedule = "*"
pytz = "*"
jinja2 = "*"
pymisp = "*"
click = "*"
cachetools = "*"
requests = "*"
jsonlines = "*"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
pdnssoc-cli = "pdnssoccli.pdnssoccli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
